--- a/media-query.css
+++ b/media-query.css
@@ -52,7 +52,8 @@ body{
 }
 
 .frase4 {
-    font-size: 21px;
+    font-size: 1.5rem;
+    margin-bottom: 4rem;
 }
 
 .botao-video{
@@ -78,6 +79,10 @@ body{
     height: 2.75rem;
     left: 20%;
     top: 85%;
+}
+
+.frase-final{
+    margin-top: 7rem;
 }
 
 .botao-voltar {
