--- a/media-query.css
+++ b/media-query.css
@@ -8,28 +8,36 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    top: 18rem;
+    left: 4rem;
     justify-content: center;
     align-items: center;
     width: 31%;
+    font-size: 1.8rem;
 }
 
 .frase3{
     display: flex;
     flex-direction: column;
     position: relative;
+    top: 20rem;
+    left: 3rem;
     justify-content: center;
     align-items: center;
     width: 40%;
+    font-size: 1.6rem;
 }
 
 .formulario {
     margin: 2rem;
-    padding: 2rem;
-    width: 35%;
-    margin-left: 52%;
-    display: flex;
-    position: relative;
-    flex-direction: column;
+padding: 2rem;
+width: 40vw;
+margin-left: 30%; 
+display: flex;
+position: relative;
+flex-direction: column;
+margin-top: -17rem;
+    left: 16rem
 }
 
 .textfield {
