Ajustes no carrossel

--- a/style.css
+++ b/style.css
@@ -422,9 +422,9 @@ body{
     margin-top: 2rem;
 }
 
-.section-frase-carousel{
-    
-}
+/* .section-frase-carousel{
+
+} */
 
 .frase-final section{
     display: block;
