--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ body{
 .textfield:focus{
     box-shadow: none;
     outline: 0;
+    border-color: #32164A;
 }
 
 #campoNumero::-webkit-outer-spin-button, 
