Alinhando itens desktop

--- a/carrossel/style-carousel.css
+++ b/carrossel/style-carousel.css
@@ -29,6 +29,7 @@ body {
     );
     /* box-shadow: 5px 10px 30px rgba(255, 255, 255, 0.15); */
     border-radius: 5px;
+    /* width: 1000%; */
   }
   
   .carousel__slider {
