--- a/style.css
+++ b/style.css
@@ -337,6 +337,14 @@ body{
     flex-direction: column;
 }
 
+.btn-video{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 16%;
+}
+
 .botao-video{
     position: relative;
     padding: 0.5rem;
