--- a/media-query.css
+++ b/media-query.css
@@ -129,9 +129,9 @@ body{
 }
 
 .lojasapp{
-    border-color: red;
+    /* border-color: red;
     border-style: solid;
-    border-width: 2px;
+    border-width: 2px; */
     position: relative;
     margin: 2rem;
     margin-top: 23rem;
