Adicionando hover no botão do rodapé

--- a/media-query.css
+++ b/media-query.css
@@ -105,8 +105,8 @@ body{
     margin-bottom: 4rem;
 }
 
-.botao-voltar {
-    /* left: 37%; */
+.botao-footer:hover {
+    transform: scale(1.5);
 }
 
 .lista-um-footer {
