Reposicionando os menus do footer

--- a/media-query.css
+++ b/media-query.css
@@ -110,13 +110,13 @@ body{
 }
 
 .lista-um-footer {
-    left: 40rem;
+    left: 63%;
     margin-top: 2rem;
 }
 
 .lista-dois-footer {
     margin: 0.3rem;
-    left: 47rem;
+    left: 75%;
     margin-top: 2rem;
 }
 
