Ajustando posição do botão enviar

--- a/media-query.css
+++ b/media-query.css
@@ -56,7 +56,7 @@ body{
 
 .textfield {
     border-width: 4px;
-    width: 87%;
+    width: 91%;
 }
 
 .mailto {
@@ -149,6 +149,11 @@ body{
     /* border-color: red; */
     /* border-width: 2px; */
     margin-top: -467px;
+}
+
+.video video{
+    width: 720px;
+    height: 620px;
 }
 
 .container-celular{
