--- a/media-query.css
+++ b/media-query.css
@@ -21,7 +21,7 @@ body{
     flex-direction: column;
     position: relative;
     top: 10rem;
-    left: 4rem;
+    left: 5rem;
     /* justify-content: center; */
     /* align-items: center; */
     width: 31%;
@@ -169,6 +169,7 @@ body{
     border: 0.1rem;
     margin: 0.4rem;
     margin-left: 8%;
+    z-index: -5;
 }
 
 .carrossel-separado{
